@@ -6,9 +6,8 @@
 
 Disassembly of section .text:
 
-0+ <.text>:
 #...
- 358:	74 06                	je     0x360
+ 358:	74 06                	je     (0x)?360( .*)?
  35a:	66 0f 1f 44 00 00    	nopw   0x0\(%rax,%rax,1\)
  360:	90                   	nop
 #pass
